Finalização da parte funcional

--- a/app/views/home/send_imap.html.erb
+++ b/app/views/home/send_imap.html.erb
@@ -9,110 +9,4 @@
   </ul>
   <%# *********************************** %>
 
-  <div class="row">
-    <div class="formulario col-md-12">
-      <div class="formulario_container">
-        <%= form_for(@imap, url: {action: "send_imap"}) do |f| %>
-        <fieldset>
-          <div class="row"></div>
-          <%# Servidor de Origem %>
-          <div>
-            <h4>Servidor de origem</h4>
-          </div>
-          <div class="row">
-            <div class="col">
-              <i class="fas fa-envelope"></i>
-              <%= f.label :source_name, t('.form.Email'), class: "form_label" %>
-              <br />
-              <%= f.text_field :source_name, class: "form-control" %>
-            </div>
-            <div class="col">
-              <i class="fas fa-database"></i>
-              <%= f.label :source_host, t('.form.Servidor'), class: "form_label"
-              %>
-              <br />
-              <%= f.text_field :source_host, class: "form-control" %>
-              <br />
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col">
-              <i class="fas fa-ethernet"></i>
-              <%= f.label :source_port, t('.form.Porta'), class: "form_label" %>
-              <br />
-              <%= f.text_field :source_port, class: "form-control" %>
-            </div>
-            <div class="col">
-              <i class="fas fa-key"></i>
-              <%= f.label :source_pass, t('.form.Senha'), class: "form_label" %>
-              <br />
-              <%= f.password_field :source_pass, class: "form-control" %>
-              <br />
-              <%#= flash_message(params[:hash_error_message]).html_safe if
-              params[:hash_error_message]%> <%#= params[:hash_error_message] if
-              params[:hash_error_message].present?%>
-            </div>
-          </div>
-          <div class="form-group">
-            <i class="fas fa-shield-alt"> SSL</i>
-            <br />
-            <%= f.check_box :source_ssl %>
-            <br />
-            <hr />
-          </div>
-          <br />
-          <div>
-            <h4>Servidor de destino</h4>
-          </div>
-          <%# Servidor de destino %>
-          <div class="row">
-            <div class="col">
-              <i class="fas fa-envelope"></i>
-              <%= f.label :dest_name, t('.form.Email'), class: "form_label" %>
-              <br />
-              <%= f.text_field :dest_name, class: "form-control" %>
-            </div>
-            <div class="col">
-              <i class="fas fa-database"></i>
-              <%= f.label :dest_host, t('.form.Servidor'), class: "form_label"
-              %>
-              <br />
-              <%= f.text_field :dest_host, class: "form-control" %>
-              <br />
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col">
-              <i class="fas fa-ethernet"></i>
-              <%= f.label :dest_port, t('.form.Porta'), class: "form_label" %>
-              <br />
-              <%= f.text_field :dest_port, class: "form-control" %>
-            </div>
-
-            <div class="col">
-              <i class="fas fa-key"></i>
-              <%= f.label :dest_pass, t('.form.Senha'), class: "form_label" %>
-              <br />
-              <%= f.password_field :dest_pass, class: "form-control" %>
-              <br />
-              <%#= flash_message(@hash_error_messages).html_safe %>
-            </div>
-          </div>
-          <div class="form-group">
-            <i class="fas fa-shield-alt"> SSL</i>
-            <br />
-            <%= f.check_box :dest_ssl %>
-            <br />
-          </div>
-          <br />
-          <div class="form-group" onclick="submit()">
-            <%= f.submit ('Migrar'), class: "btn btn-primary btn-lg btn-block"%>
-          </div>
-        </fieldset>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
+  <%= render "form"%>
