Adição de login

--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -95,7 +95,7 @@
             <br />
           </div>
           <br />
-          <div class="form-group" onclick="submit()">
+          <div class="form-group" id="click-me">
             <%= f.submit ('Migrar'), class: "btn btn-primary btn-lg btn-block"%>
           </div>
         </fieldset>
@@ -103,3 +103,6 @@
       </div>
     </div>
   </div>
+
+  <%# https://formden.com/blog/addon-icon %>
+  <%# https://mdbootstrap.com/docs/jquery/navigation/footer/ %>
