--- a/app/views/home/imap.html.erb
+++ b/app/views/home/imap.html.erb
@@ -1,4 +1,9 @@
- <%= render "layouts/includes/alerts" %>
+<br>
+<div class="container">
+   <%= render "layouts/includes/alerts" %>
+</div>
+
+ 
 
  <%= render "form"%>
 
