--- a/app/views/home/send_imap.html.erb
+++ b/app/views/home/send_imap.html.erb
@@ -1,3 +1,4 @@
+<br>
 <div class="container">
   <%# ****************************** %>
   <ul>
@@ -5,10 +6,11 @@
     <div class="alert alert-danger" role="alert">
       <%=msg%>
     </div>
-    <%end%> <%end%>
+    <%end%>
+     <%end%>
   </ul>
   <%# *********************************** %>
-
+</div>
   <%= render "form"%>
 
   <div class="loading-spinner">
