--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>System</title>
+      <%= favicon_link_tag 'icon.png' %>
+    <title>Migração</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -14,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 
   </head>
@@ -21,9 +23,10 @@
   <body>
 
     <%# <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3"> %>
-    <nav style="background-color:#3d0f96;height:70px;padding-top:5px">
+    <nav style="background-color:#3d0f96;height:70px;padding-top:10px">
     <div class="container-fluid">
         <%# <a href="#" class="navbar-brand mr-3">Migrar e-mails</a> %>
+     
          <%= image_tag "user.png", alt: "Agência W3" %>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
